Fixed Booking link

--- a/themes/airevisuelle/i18n/en.toml
+++ b/themes/airevisuelle/i18n/en.toml
@@ -42,3 +42,9 @@
 
 [visionavenue]
   other = "https://www.visionavenue.ca/fr/"
+
+[previous_post]
+  other = "Previous post"
+
+[next_post]
+  other = "Next post"
