--- a/themes/airevisuelle/i18n/fr.toml
+++ b/themes/airevisuelle/i18n/fr.toml
@@ -42,3 +42,9 @@
 
 [visionavenue]
   other = "https://www.visionavenue.ca/fr/"
+
+[previous_post]
+  other = "Article précédent"
+
+[next_post]
+  other = "Article suivant"
