--- a/content/promotions/juin2021.en.md
+++ b/content/promotions/juin2021.en.md
@@ -8,8 +8,8 @@ image: /img/airevisuelle-promo-juin-juillet-2021-en.png
 i18nlanguage: en
 startdate: June 1st 2021
 enddate: July 31st 2021
-weight: 0
-draft: false
+weight: 2
+draft: true
 ---
 
 Get 25% off all sunglasses frames in store
