--- a/content/promotions/juin2021.md
+++ b/content/promotions/juin2021.md
@@ -8,8 +8,8 @@ image: /img/airevisuelle-promo-juin-juillet-2021-fr.png
 i18nlanguage: fr
 startdate: 1er juin 2021
 enddate: 31 juillet 2021
-weight: 0
-draft: false
+weight: 2
+draft: true
 ---
 
 Obtenez 25% de rabais sur toutes les montures solaires en magasin
