update hover text on partner logos
Signed-off-by: serg <contact@sergfurtak.com>

--- a/themes/airevisuelle/i18n/en.toml
+++ b/themes/airevisuelle/i18n/en.toml
@@ -56,7 +56,7 @@
   other = "Our deals"
 
 [see_products]
-  other = "See our products"
+  other = "Buy online at"
 
 [corner]
   other = "Corner of René-Laennec"
