--- a/themes/airevisuelle/i18n/fr.toml
+++ b/themes/airevisuelle/i18n/fr.toml
@@ -56,7 +56,7 @@
   other = "Nos promotions"
 
 [see_products]
-  other = "Voir nos produits"
+  other = "Achetez en ligne chez"
 
 [corner]
   other = "Coin René-Laennec"
